--- a/Untitled12.ipynb
+++ b/Untitled12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUmA73NxDXuoEJsY0fb0G7",
+      "authorship_tag": "ABX9TyMK4Ndu7VPG06QL/hAR3GiX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +28,133 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.datasets import load_wine\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import (accuracy_score, precision_recall_fscore_support,\n",
+        "                             confusion_matrix, classification_report)\n",
+        "\n",
+        "def lda_classification_analysis():\n",
+        "    # Step 1: Prepare the Data\n",
+        "    print(\"Step 1: Data Preparation\")\n",
+        "    wine_data = load_wine()\n",
+        "    features, labels = wine_data.data, wine_data.target\n",
+        "\n",
+        "    # Split into training and test sets\n",
+        "    features_train, features_test, labels_train, labels_test = train_test_split(\n",
+        "        features, labels, test_size=0.3, random_state=42\n",
+        "    )\n",
+        "\n",
+        "    # Standardize the feature values\n",
+        "    scaler = StandardScaler()\n",
+        "    features_train_scaled = scaler.fit_transform(features_train)\n",
+        "    features_test_scaled = scaler.transform(features_test)\n",
+        "    print(\"Training set shape:\", features_train_scaled.shape)\n",
+        "    print(\"Test set shape:\", features_test_scaled.shape)\n",
+        "\n",
+        "    # Step 2: Train the Models\n",
+        "    print(\"\\nStep 2: Training Models\")\n",
+        "    lda_model = LinearDiscriminantAnalysis()\n",
+        "    lda_model.fit(features_train_scaled, labels_train)\n",
+        "\n",
+        "    logistic_model = LogisticRegression(multi_class='multinomial',\n",
+        "                                         max_iter=1000)\n",
+        "    logistic_model.fit(features_train_scaled, labels_train)\n",
+        "\n",
+        "    # Step 3: Evaluate the Models\n",
+        "    def evaluate(model, features, true_labels, model_name):\n",
+        "        predicted_labels = model.predict(features)\n",
+        "        accuracy = accuracy_score(true_labels, predicted_labels)\n",
+        "        precision, recall, f1, _ = precision_recall_fscore_support(\n",
+        "            true_labels, predicted_labels, average='weighted'\n",
+        "        )\n",
+        "        conf_matrix = confusion_matrix(true_labels, predicted_labels)\n",
+        "\n",
+        "        print(f\"\\n{model_name} Results:\")\n",
+        "        print(f\"Accuracy: {accuracy:.4f}\")\n",
+        "        print(f\"Precision: {precision:.4f}\")\n",
+        "        print(f\"Recall: {recall:.4f}\")\n",
+        "        print(f\"F1-Score: {f1:.4f}\")\n",
+        "        print(\"\\nConfusion Matrix:\")\n",
+        "        print(conf_matrix)\n",
+        "        print(\"\\nClassification Report:\")\n",
+        "        print(classification_report(true_labels, predicted_labels))\n",
+        "\n",
+        "        return conf_matrix, accuracy, precision, recall, f1\n",
+        "\n",
+        "    print(\"\\nStep 3: Model Evaluation\")\n",
+        "    lda_metrics = evaluate(lda_model, features_test_scaled, labels_test, \"LDA\")\n",
+        "    lr_metrics = evaluate(logistic_model, features_test_scaled, labels_test,\n",
+        "                          \"Logistic Regression\")\n",
+        "\n",
+        "    # Step 4: Visualize Decision Boundaries\n",
+        "    def visualize_decision_boundaries(features, labels, models, model_names):\n",
+        "        lda_reduction = LinearDiscriminantAnalysis(n_components=2)\n",
+        "        features_2d = lda_reduction.fit_transform(features, labels)\n",
+        "\n",
+        "        x_min, x_max = features_2d[:, 0].min() - 1, features_2d[:, 0].max() + 1\n",
+        "        y_min, y_max = features_2d[:, 1].min() - 1, features_2d[:, 1].max() + 1\n",
+        "        xx, yy = np.meshgrid(np.arange(x_min, x_max, 0.1),\n",
+        "                             np.arange(y_min, y_max, 0.1))\n",
+        "\n",
+        "        plt.figure(figsize=(12, 5))\n",
+        "\n",
+        "        for idx, (model, name) in enumerate(zip(models, model_names)):\n",
+        "            plt.subplot(1, 2, idx + 1)\n",
+        "\n",
+        "            model_2d = model.__class__()\n",
+        "            model_2d.fit(features_2d, labels)\n",
+        "\n",
+        "            decision_boundary = model_2d.predict(np.c_[xx.ravel(), yy.ravel()])\n",
+        "            decision_boundary = decision_boundary.reshape(xx.shape)\n",
+        "            plt.contourf(xx, yy, decision_boundary, alpha=0.4)\n",
+        "\n",
+        "            scatter_plot = plt.scatter(features_2d[:, 0], features_2d[:, 1],\n",
+        "                                       c=labels, cmap='viridis')\n",
+        "            plt.colorbar(scatter_plot)\n",
+        "\n",
+        "            plt.title(f'{name} Decision Boundaries')\n",
+        "            plt.xlabel('First LDA Component')\n",
+        "            plt.ylabel('Second LDA Component')\n",
+        "\n",
+        "        plt.tight_layout()\n",
+        "        plt.show()\n",
+        "\n",
+        "    print(\"\\nStep 4: Plotting Decision Boundaries\")\n",
+        "    visualize_decision_boundaries(features_train_scaled, labels_train,\n",
+        "                                  [lda_model, logistic_model],\n",
+        "                                  [\"LDA\", \"Logistic Regression\"])\n",
+        "\n",
+        "    # Step 5: Summary of Analysis\n",
+        "    print(\"\\nStep 5: Comparative Analysis\")\n",
+        "    print(\"Model Comparison Summary:\")\n",
+        "    print(\"1. Classification Performance:\")\n",
+        "    print(f\"   LDA Accuracy: {lda_metrics[1]:.4f}\")\n",
+        "    print(f\"   Logistic Regression Accuracy: {lr_metrics[1]:.4f}\")\n",
+        "    print(\"\\n2. Computational Aspects:\")\n",
+        "    print(\"   - LDA assumes normal distribution with equal covariance\")\n",
+        "    print(\"   - Logistic Regression does not assume a specific distribution\")\n",
+        "    print(\"\\n3. Model Interpretability:\")\n",
+        "    print(\"   - LDA gives feature importance through discriminants\")\n",
+        "    print(\"   - Logistic Regression shows feature importance via coefficients\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    lda_classification_analysis()\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "id": "V4jQmIONEp65",
-        "outputId": "c2b96972-5f07-4382-902a-809bb1cf40b7"
+        "id": "Nz_KORcLMhMV",
+        "outputId": "ec9bc98a-bf02-4456-f582-33eab6a58719"
       },
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,143 +248,13 @@
             "\n",
             "2. Computational Aspects:\n",
             "   - LDA assumes normal distribution with equal covariance\n",
-            "   - Logistic Regression makes no distribution assumptions\n",
+            "   - Logistic Regression does not assume a specific distribution\n",
             "\n",
             "3. Model Interpretability:\n",
-            "   - LDA provides feature importance through discriminants\n",
-            "   - Logistic Regression provides feature importance through coefficients\n"
+            "   - LDA gives feature importance through discriminants\n",
+            "   - Logistic Regression shows feature importance via coefficients\n"
           ]
         }
-      ],
-      "source": [
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.datasets import load_wine\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import (accuracy_score, precision_recall_fscore_support,\n",
-        "                           confusion_matrix, classification_report)\n",
-        "\n",
-        "def lab2_lda_classification():\n",
-        "    # Step 1: Data Preparation\n",
-        "    print(\"Step 1: Data Preparation\")\n",
-        "    # Load dataset\n",
-        "    wine = load_wine()\n",
-        "    X, y = wine.data, wine.target\n",
-        "\n",
-        "    # Split data\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(\n",
-        "        X, y, test_size=0.3, random_state=42\n",
-        "    )\n",
-        "\n",
-        "    # Standardize features\n",
-        "    scaler = StandardScaler()\n",
-        "    X_train_scaled = scaler.fit_transform(X_train)\n",
-        "    X_test_scaled = scaler.transform(X_test)\n",
-        "    print(\"Training set shape:\", X_train_scaled.shape)\n",
-        "    print(\"Test set shape:\", X_test_scaled.shape)\n",
-        "\n",
-        "    # Step 2: Model Training\n",
-        "    print(\"\\nStep 2: Training Models\")\n",
-        "    # Train LDA\n",
-        "    lda = LinearDiscriminantAnalysis()\n",
-        "    lda.fit(X_train_scaled, y_train)\n",
-        "\n",
-        "    # Train Logistic Regression\n",
-        "    lr = LogisticRegression(multi_class='multinomial',\n",
-        "                           max_iter=1000)\n",
-        "    lr.fit(X_train_scaled, y_train)\n",
-        "\n",
-        "    # Step 3: Model Evaluation\n",
-        "    def evaluate_model(model, X, y_true, name):\n",
-        "        y_pred = model.predict(X)\n",
-        "        accuracy = accuracy_score(y_true, y_pred)\n",
-        "        precision, recall, f1, _ = precision_recall_fscore_support(\n",
-        "            y_true, y_pred, average='weighted'\n",
-        "        )\n",
-        "        conf_matrix = confusion_matrix(y_true, y_pred)\n",
-        "\n",
-        "        print(f\"\\n{name} Results:\")\n",
-        "        print(f\"Accuracy: {accuracy:.4f}\")\n",
-        "        print(f\"Precision: {precision:.4f}\")\n",
-        "        print(f\"Recall: {recall:.4f}\")\n",
-        "        print(f\"F1-Score: {f1:.4f}\")\n",
-        "        print(\"\\nConfusion Matrix:\")\n",
-        "        print(conf_matrix)\n",
-        "        print(\"\\nClassification Report:\")\n",
-        "        print(classification_report(y_true, y_pred))\n",
-        "\n",
-        "        return conf_matrix, accuracy, precision, recall, f1\n",
-        "\n",
-        "    print(\"\\nStep 3: Model Evaluation\")\n",
-        "    # Evaluate both models\n",
-        "    lda_metrics = evaluate_model(lda, X_test_scaled, y_test, \"LDA\")\n",
-        "    lr_metrics = evaluate_model(lr, X_test_scaled, y_test,\n",
-        "                              \"Logistic Regression\")\n",
-        "\n",
-        "    # Step 4: Visualization of Decision Boundaries\n",
-        "    def plot_decision_boundaries(X, y, models, model_names):\n",
-        "        # Reduce to 2D using LDA\n",
-        "        lda_viz = LinearDiscriminantAnalysis(n_components=2)\n",
-        "        X_2d = lda_viz.fit_transform(X, y)\n",
-        "\n",
-        "        # Create mesh grid\n",
-        "        x_min, x_max = X_2d[:, 0].min() - 1, X_2d[:, 0].max() + 1\n",
-        "        y_min, y_max = X_2d[:, 1].min() - 1, X_2d[:, 1].max() + 1\n",
-        "        xx, yy = np.meshgrid(np.arange(x_min, x_max, 0.1),\n",
-        "                            np.arange(y_min, y_max, 0.1))\n",
-        "\n",
-        "        plt.figure(figsize=(12, 5))\n",
-        "\n",
-        "        for idx, (model, name) in enumerate(zip(models, model_names)):\n",
-        "            plt.subplot(1, 2, idx + 1)\n",
-        "\n",
-        "            # Fit model on 2D data\n",
-        "            model_2d = model.__class__()\n",
-        "            model_2d.fit(X_2d, y)\n",
-        "\n",
-        "            # Plot decision boundary\n",
-        "            Z = model_2d.predict(np.c_[xx.ravel(), yy.ravel()])\n",
-        "            Z = Z.reshape(xx.shape)\n",
-        "            plt.contourf(xx, yy, Z, alpha=0.4)\n",
-        "\n",
-        "            # Plot training points\n",
-        "            scatter = plt.scatter(X_2d[:, 0], X_2d[:, 1],\n",
-        "                                c=y, cmap='viridis')\n",
-        "            plt.colorbar(scatter)\n",
-        "\n",
-        "            plt.title(f'{name} Decision Boundaries')\n",
-        "            plt.xlabel('First LDA Component')\n",
-        "            plt.ylabel('Second LDA Component')\n",
-        "\n",
-        "        plt.tight_layout()\n",
-        "        plt.show()\n",
-        "\n",
-        "    print(\"\\nStep 4: Plotting Decision Boundaries\")\n",
-        "    plot_decision_boundaries(X_train_scaled, y_train,\n",
-        "                           [lda, lr],\n",
-        "                           [\"LDA\", \"Logistic Regression\"])\n",
-        "\n",
-        "    # Step 5: Comparative Analysis\n",
-        "    print(\"\\nStep 5: Comparative Analysis\")\n",
-        "    print(\"Model Comparison Summary:\")\n",
-        "    print(\"1. Classification Performance:\")\n",
-        "    print(f\"   LDA Accuracy: {lda_metrics[1]:.4f}\")\n",
-        "    print(f\"   Logistic Regression Accuracy: {lr_metrics[1]:.4f}\")\n",
-        "    print(\"\\n2. Computational Aspects:\")\n",
-        "    print(\"   - LDA assumes normal distribution with equal covariance\")\n",
-        "    print(\"   - Logistic Regression makes no distribution assumptions\")\n",
-        "    print(\"\\n3. Model Interpretability:\")\n",
-        "    print(\"   - LDA provides feature importance through discriminants\")\n",
-        "    print(\"   - Logistic Regression provides feature importance through coefficients\")\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    lab2_lda_classification()\n",
-        "\n",
-        "\n",
-        "\n"
       ]
     }
   ]
