--- a/Untitled11.ipynb
+++ b/Untitled11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9VI8XWqilYE70oPENCOTs",
+      "authorship_tag": "ABX9TyNZ7zvB4SnzjiEbwJMaSq8a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +28,94 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+        "from sklearn.decomposition import PCA\n",
+        "\n",
+        "def lda_analysis():\n",
+        "    # Step 1: Load and Prepare the Data\n",
+        "    print(\"Step 1: Data Preparation\")\n",
+        "    iris = load_iris()\n",
+        "    features, labels = iris.data, iris.target\n",
+        "    feature_names = iris.feature_names\n",
+        "\n",
+        "    # Standardize the features\n",
+        "    scaler = StandardScaler()\n",
+        "    features_scaled = scaler.fit_transform(features)\n",
+        "    print(\"Data standardized - Mean:\", features_scaled.mean().round(6))\n",
+        "    print(\"Data standardized - Std:\", features_scaled.std().round(6))\n",
+        "\n",
+        "    # Step 2: Apply LDA\n",
+        "    print(\"\\nStep 2: Applying LDA\")\n",
+        "    lda = LinearDiscriminantAnalysis(n_components=2)\n",
+        "    features_lda = lda.fit_transform(features_scaled, labels)\n",
+        "    print(\"Original data shape:\", features.shape)\n",
+        "    print(\"Transformed data shape:\", features_lda.shape)\n",
+        "    print(\"LDA explained variance ratio:\",\n",
+        "          lda.explained_variance_ratio_.round(4))\n",
+        "\n",
+        "    # Step 3: Apply PCA for Comparison\n",
+        "    print(\"\\nStep 3: Applying PCA for Comparison\")\n",
+        "    pca = PCA(n_components=2)\n",
+        "    features_pca = pca.fit_transform(features_scaled)\n",
+        "    print(\"PCA explained variance ratio:\",\n",
+        "          pca.explained_variance_ratio_.round(4))\n",
+        "\n",
+        "    # Step 4: Create Visualizations\n",
+        "    print(\"\\nStep 4: Creating Visualizations\")\n",
+        "    plt.figure(figsize=(12, 5))\n",
+        "\n",
+        "    # LDA Visualization\n",
+        "    plt.subplot(1, 2, 1)\n",
+        "    lda_scatter = plt.scatter(features_lda[:, 0], features_lda[:, 1],\n",
+        "                              c=labels, cmap='viridis')\n",
+        "    plt.title('LDA Transformation')\n",
+        "    plt.xlabel('First LDA Component')\n",
+        "    plt.ylabel('Second LDA Component')\n",
+        "    plt.colorbar(lda_scatter)\n",
+        "\n",
+        "    # PCA Visualization\n",
+        "    plt.subplot(1, 2, 2)\n",
+        "    pca_scatter = plt.scatter(features_pca[:, 0], features_pca[:, 1],\n",
+        "                              c=labels, cmap='viridis')\n",
+        "    plt.title('PCA Transformation')\n",
+        "    plt.xlabel('First Principal Component')\n",
+        "    plt.ylabel('Second Principal Component')\n",
+        "    plt.colorbar(pca_scatter)\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Step 5: Analysis of Results\n",
+        "    print(\"\\nStep 5: Analysis of Results\")\n",
+        "    print(\"LDA vs PCA Comparison:\")\n",
+        "    print(\"- LDA maximizes class separability\")\n",
+        "    print(\"- PCA maximizes variance explained\")\n",
+        "\n",
+        "    # Calculate class separation metrics\n",
+        "    class_means_lda = [np.mean(features_lda[labels == i], axis=0) for i in range(3)]\n",
+        "    class_means_pca = [np.mean(features_pca[labels == i], axis=0) for i in range(3)]\n",
+        "\n",
+        "    print(\"\\nInterclass Distances:\")\n",
+        "    print(\"LDA Distance between classes 0 and 1:\", np.linalg.norm(class_means_lda[0] - class_means_lda[1]).round(4))\n",
+        "    print(\"PCA Distance between classes 0 and 1:\", np.linalg.norm(class_means_pca[0] - class_means_pca[1]).round(4))\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    lda_analysis()\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 662
+          "height": 889
         },
-        "id": "5vgm3bl4D2o0",
-        "outputId": "c59f9731-0c80-47f7-bfe7-e44affd11ddd"
+        "id": "8wetvK2FObha",
+        "outputId": "accc6cab-7a01-4993-eed4-7413d56b99ab"
       },
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,10 +130,10 @@
             "Transformed data shape: (150, 2)\n",
             "LDA explained variance ratio: [0.9912 0.0088]\n",
             "\n",
-            "Step 3: Applying PCA for comparison\n",
+            "Step 3: Applying PCA for Comparison\n",
             "PCA explained variance ratio: [0.7296 0.2285]\n",
             "\n",
-            "Step 4: Creating visualizations\n"
+            "Step 4: Creating Visualizations\n"
           ]
         },
         {
@@ -77,95 +156,11 @@
             "- LDA maximizes class separability\n",
             "- PCA maximizes variance explained\n",
             "\n",
-            "Interclass distances:\n",
-            "LDA: 9.4797\n",
-            "PCA: 2.8476\n"
+            "Interclass Distances:\n",
+            "LDA Distance between classes 0 and 1: 9.4797\n",
+            "PCA Distance between classes 0 and 1: 2.8476\n"
           ]
         }
-      ],
-      "source": [
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.datasets import load_iris\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-        "from sklearn.decomposition import PCA\n",
-        "import seaborn as sns\n",
-        "\n",
-        "def lab1_lda_analysis():\n",
-        "    # Step 1: Load and Prepare Data\n",
-        "    print(\"Step 1: Data Preparation\")\n",
-        "    # Load dataset\n",
-        "    iris = load_iris()\n",
-        "    X, y = iris.data, iris.target\n",
-        "    feature_names = iris.feature_names\n",
-        "\n",
-        "    # Standardize features\n",
-        "    scaler = StandardScaler()\n",
-        "    X_scaled = scaler.fit_transform(X)\n",
-        "    print(\"Data standardized - Mean:\", X_scaled.mean().round(6))\n",
-        "    print(\"Data standardized - Std:\", X_scaled.std().round(6))\n",
-        "\n",
-        "    # Step 2: Apply LDA\n",
-        "    print(\"\\nStep 2: Applying LDA\")\n",
-        "    lda = LinearDiscriminantAnalysis(n_components=2)\n",
-        "    X_lda = lda.fit_transform(X_scaled, y)\n",
-        "    print(\"Original data shape:\", X.shape)\n",
-        "    print(\"Transformed data shape:\", X_lda.shape)\n",
-        "    print(\"LDA explained variance ratio:\",\n",
-        "          lda.explained_variance_ratio_.round(4))\n",
-        "\n",
-        "    # Step 3: Apply PCA for comparison\n",
-        "    print(\"\\nStep 3: Applying PCA for comparison\")\n",
-        "    pca = PCA(n_components=2)\n",
-        "    X_pca = pca.fit_transform(X_scaled)\n",
-        "    print(\"PCA explained variance ratio:\",\n",
-        "          pca.explained_variance_ratio_.round(4))\n",
-        "\n",
-        "    # Step 4: Visualization\n",
-        "    print(\"\\nStep 4: Creating visualizations\")\n",
-        "    plt.figure(figsize=(12, 5))\n",
-        "\n",
-        "    # LDA Plot\n",
-        "    plt.subplot(1, 2, 1)\n",
-        "    scatter = plt.scatter(X_lda[:, 0], X_lda[:, 1],\n",
-        "                         c=y, cmap='viridis')\n",
-        "    plt.title('LDA Transformation')\n",
-        "    plt.xlabel('First LDA Component')\n",
-        "    plt.ylabel('Second LDA Component')\n",
-        "    plt.colorbar(scatter)\n",
-        "\n",
-        "    # PCA Plot\n",
-        "    plt.subplot(1, 2, 2)\n",
-        "    scatter = plt.scatter(X_pca[:, 0], X_pca[:, 1],\n",
-        "                         c=y, cmap='viridis')\n",
-        "    plt.title('PCA Transformation')\n",
-        "    plt.xlabel('First Principal Component')\n",
-        "    plt.ylabel('Second Principal Component')\n",
-        "    plt.colorbar(scatter)\n",
-        "\n",
-        "    plt.tight_layout()\n",
-        "    plt.show()\n",
-        "\n",
-        "    # Step 5: Analysis of Results\n",
-        "    print(\"\\nStep 5: Analysis of Results\")\n",
-        "    print(\"LDA vs PCA Comparison:\")\n",
-        "    print(\"- LDA maximizes class separability\")\n",
-        "    print(\"- PCA maximizes variance explained\")\n",
-        "\n",
-        "    # Calculate class separation metrics\n",
-        "    class_means_lda = [np.mean(X_lda[y == i], axis=0)\n",
-        "                      for i in range(3)]\n",
-        "    class_means_pca = [np.mean(X_pca[y == i], axis=0)\n",
-        "                      for i in range(3)]\n",
-        "\n",
-        "    print(\"\\nInterclass distances:\")\n",
-        "    print(\"LDA:\", np.linalg.norm(class_means_lda[0] - class_means_lda[1]).round(4))\n",
-        "    print(\"PCA:\", np.linalg.norm(class_means_pca[0] - class_means_pca[1]).round(4))\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    lab1_lda_analysis()\n",
-        "\n"
       ]
     }
   ]
